# agent-pathologies

./: .env.example  .gitignore  PREREGISTRATION.md  README.md  RELATED_WORK.md  pyproject.toml
configs/: models.yaml  pivot_a.yaml
data/: preliminary_findings.md
experiments/context_rot/: PREREGISTRATION.md  README.md  analyze.py  run.py
experiments/self_consistency/: PREREGISTRATION.md  README.md  analyze.py  run.py
experiments/sycophancy/: PREREGISTRATION.md  README.md  analyze.py  run.py
paper/: 01_introduction.tex  02_related_work.tex  03_methodology.tex  04_hypotheses_and_analysis_plan.tex  05_experimental_setup.tex  06_results.tex  07_discussion.tex  08_limitations.tex  09_conclusion.tex  10_reproducibility.tex  README.md  abstract.tex  main.tex  references.bib
scripts/: clean_dataset.py  estimate_cost.py  make_paper_figures.py  pair_analysis.py  retry_deepseek_empties.py  retry_qwen_provider_error.py  retry_qwen_truncated.py  retry_truncated.py  retry_v4pro_instruct.py  retry_v4pro_reasoning_provider_error.py  run_sweep.sh  watch_progress.sh
src/agent_pathologies/: __init__.py  budget.py  client.py  config_loader.py  runner.py  types.py
src/agent_pathologies/analysis/: exclusions.py  metrics.py  plots.py  stats.py
src/agent_pathologies/conversation/: pushback.py  synthesizer.py
src/agent_pathologies/tasks/: __init__.py  arithmetic.py  base.py  closed_qa.py  code_trace.py  counterintuitive_math.py  multi_fact_needle.py  needle_qa.py  (+2 more)
tests/: test_metrics.py  test_runner.py  test_scoring.py  test_stats.py  test_synthesizer.py  test_tasks.py
