[project]
name = "agent-pathologies"
version = "0.1.0"
description = "A framework for measuring trajectory pathologies in multi-turn LLM agents."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "tenacity>=8.3.0",
  "pandas>=2.2.0",
  "matplotlib>=3.9.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "scipy>=1.13.0",
  "statsmodels>=0.14.0",
  "tiktoken>=0.7.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
